; ModuleID = '/home/carl/AnghaBench/reactos/dll/3rdparty/libtiff/extr_tif_read.c_TIFFReadEncodedStrip.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/3rdparty/libtiff/extr_tif_read.c_TIFFReadEncodedStrip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_13__ = type { i32, i64 (%struct.TYPE_13__*, i8*, i64, i32)*, i32 (%struct.TYPE_13__*, i8*, i64)*, %struct.TYPE_12__ }
%struct.TYPE_12__ = type { i64, i32 }

@TIFFReadEncodedStrip.module = internal constant [21 x i8] c"TIFFReadEncodedStrip\00", align 16
@COMPRESSION_NONE = common dso_local global i64 0, align 8
@TIFF_NOREADRAW = common dso_local global i32 0, align 4
@TIFF_NOBITREV = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @TIFFReadEncodedStrip(%struct.TYPE_13__* %0, i32 %1, i8* %2, i64 %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca %struct.TYPE_13__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca %struct.TYPE_12__*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  store %struct.TYPE_13__* %0, %struct.TYPE_13__** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  %13 = load %struct.TYPE_13__*, %struct.TYPE_13__** %6, align 8
  %14 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %13, i32 0, i32 3
  store %struct.TYPE_12__* %14, %struct.TYPE_12__** %10, align 8
  %15 = load %struct.TYPE_13__*, %struct.TYPE_13__** %6, align 8
  %16 = load i32, i32* %7, align 4
  %17 = call i64 @TIFFReadEncodedStripGetStripSize(%struct.TYPE_13__* %15, i32 %16, i32* %12)
  store i64 %17, i64* %11, align 8
  %18 = load i64, i64* %11, align 8
  %19 = icmp eq i64 %18, -1
  br i1 %19, label %20, label %21

20:                                               ; preds = %4
  store i64 -1, i64* %5, align 8
  br label %116

21:                                               ; preds = %4
  %22 = load %struct.TYPE_12__*, %struct.TYPE_12__** %10, align 8
  %23 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = load i64, i64* @COMPRESSION_NONE, align 8
  %26 = icmp eq i64 %24, %25
  br i1 %26, label %27, label %81

27:                                               ; preds = %21
  %28 = load i64, i64* %9, align 8
  %29 = icmp ne i64 %28, -1
  br i1 %29, label %30, label %81

30:                                               ; preds = %27
  %31 = load i64, i64* %9, align 8
  %32 = load i64, i64* %11, align 8
  %33 = icmp sge i64 %31, %32
  br i1 %33, label %34, label %81

34:                                               ; preds = %30
  %35 = load %struct.TYPE_13__*, %struct.TYPE_13__** %6, align 8
  %36 = call i32 @isMapped(%struct.TYPE_13__* %35)
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %81, label %38

38:                                               ; preds = %34
  %39 = load %struct.TYPE_13__*, %struct.TYPE_13__** %6, align 8
  %40 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 8
  %42 = load i32, i32* @TIFF_NOREADRAW, align 4
  %43 = and i32 %41, %42
  %44 = icmp eq i32 %43, 0
  br i1 %44, label %45, label %81

45:                                               ; preds = %38
  %46 = load %struct.TYPE_13__*, %struct.TYPE_13__** %6, align 8
  %47 = load i32, i32* %7, align 4
  %48 = load i8*, i8** %8, align 8
  %49 = load i64, i64* %11, align 8
  %50 = call i64 @TIFFReadRawStrip1(%struct.TYPE_13__* %46, i32 %47, i8* %48, i64 %49, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @TIFFReadEncodedStrip.module, i64 0, i64 0))
  %51 = load i64, i64* %11, align 8
  %52 = icmp ne i64 %50, %51
  br i1 %52, label %53, label %54

53:                                               ; preds = %45
  store i64 -1, i64* %5, align 8
  br label %116

54:                                               ; preds = %45
  %55 = load %struct.TYPE_13__*, %struct.TYPE_13__** %6, align 8
  %56 = load %struct.TYPE_12__*, %struct.TYPE_12__** %10, align 8
  %57 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %56, i32 0, i32 1
  %58 = load i32, i32* %57, align 8
  %59 = call i32 @isFillOrder(%struct.TYPE_13__* %55, i32 %58)
  %60 = icmp ne i32 %59, 0
  br i1 %60, label %72, label %61

61:                                               ; preds = %54
  %62 = load %struct.TYPE_13__*, %struct.TYPE_13__** %6, align 8
  %63 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %62, i32 0, i32 0
  %64 = load i32, i32* %63, align 8
  %65 = load i32, i32* @TIFF_NOBITREV, align 4
  %66 = and i32 %64, %65
  %67 = icmp eq i32 %66, 0
  br i1 %67, label %68, label %72

68:                                               ; preds = %61
  %69 = load i8*, i8** %8, align 8
  %70 = load i64, i64* %11, align 8
  %71 = call i32 @TIFFReverseBits(i8* %69, i64 %70)
  br label %72

72:                                               ; preds = %68, %61, %54
  %73 = load %struct.TYPE_13__*, %struct.TYPE_13__** %6, align 8
  %74 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %73, i32 0, i32 2
  %75 = load i32 (%struct.TYPE_13__*, i8*, i64)*, i32 (%struct.TYPE_13__*, i8*, i64)** %74, align 8
  %76 = load %struct.TYPE_13__*, %struct.TYPE_13__** %6, align 8
  %77 = load i8*, i8** %8, align 8
  %78 = load i64, i64* %11, align 8
  %79 = call i32 %75(%struct.TYPE_13__* %76, i8* %77, i64 %78)
  %80 = load i64, i64* %11, align 8
  store i64 %80, i64* %5, align 8
  br label %116

81:                                               ; preds = %38, %34, %30, %27, %21
  %82 = load i64, i64* %9, align 8
  %83 = icmp ne i64 %82, -1
  br i1 %83, label %84, label %90

84:                                               ; preds = %81
  %85 = load i64, i64* %9, align 8
  %86 = load i64, i64* %11, align 8
  %87 = icmp slt i64 %85, %86
  br i1 %87, label %88, label %90

88:                                               ; preds = %84
  %89 = load i64, i64* %9, align 8
  store i64 %89, i64* %11, align 8
  br label %90

90:                                               ; preds = %88, %84, %81
  %91 = load %struct.TYPE_13__*, %struct.TYPE_13__** %6, align 8
  %92 = load i32, i32* %7, align 4
  %93 = call i32 @TIFFFillStrip(%struct.TYPE_13__* %91, i32 %92)
  %94 = icmp ne i32 %93, 0
  br i1 %94, label %96, label %95

95:                                               ; preds = %90
  store i64 -1, i64* %5, align 8
  br label %116

96:                                               ; preds = %90
  %97 = load %struct.TYPE_13__*, %struct.TYPE_13__** %6, align 8
  %98 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %97, i32 0, i32 1
  %99 = load i64 (%struct.TYPE_13__*, i8*, i64, i32)*, i64 (%struct.TYPE_13__*, i8*, i64, i32)** %98, align 8
  %100 = load %struct.TYPE_13__*, %struct.TYPE_13__** %6, align 8
  %101 = load i8*, i8** %8, align 8
  %102 = load i64, i64* %11, align 8
  %103 = load i32, i32* %12, align 4
  %104 = call i64 %99(%struct.TYPE_13__* %100, i8* %101, i64 %102, i32 %103)
  %105 = icmp sle i64 %104, 0
  br i1 %105, label %106, label %107

106:                                              ; preds = %96
  store i64 -1, i64* %5, align 8
  br label %116

107:                                              ; preds = %96
  %108 = load %struct.TYPE_13__*, %struct.TYPE_13__** %6, align 8
  %109 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %108, i32 0, i32 2
  %110 = load i32 (%struct.TYPE_13__*, i8*, i64)*, i32 (%struct.TYPE_13__*, i8*, i64)** %109, align 8
  %111 = load %struct.TYPE_13__*, %struct.TYPE_13__** %6, align 8
  %112 = load i8*, i8** %8, align 8
  %113 = load i64, i64* %11, align 8
  %114 = call i32 %110(%struct.TYPE_13__* %111, i8* %112, i64 %113)
  %115 = load i64, i64* %11, align 8
  store i64 %115, i64* %5, align 8
  br label %116

116:                                              ; preds = %107, %106, %95, %72, %53, %20
  %117 = load i64, i64* %5, align 8
  ret i64 %117
}

declare dso_local i64 @TIFFReadEncodedStripGetStripSize(%struct.TYPE_13__*, i32, i32*) #1

declare dso_local i32 @isMapped(%struct.TYPE_13__*) #1

declare dso_local i64 @TIFFReadRawStrip1(%struct.TYPE_13__*, i32, i8*, i64, i8*) #1

declare dso_local i32 @isFillOrder(%struct.TYPE_13__*, i32) #1

declare dso_local i32 @TIFFReverseBits(i8*, i64) #1

declare dso_local i32 @TIFFFillStrip(%struct.TYPE_13__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
